@@ -245,9 +245,6 @@ public:
     virtual int write(ibis::array_t<double> &,
                       ibis::array_t<int64_t> &,
                       ibis::array_t<uint32_t> &) const =0;
-    /// Compute the size of arrays that would be generated by the
-    /// serializatioin function (write).
-    virtual void serialSizes(uint64_t&, uint64_t&, uint64_t&) const =0;
     /// Reconstructs an index from the named file.  The name can be the
     /// directory containing an index file.  In this case, the name of the
     /// index file must be the name of the column followed by ".idx" suffix.
