@@ -35,7 +35,6 @@ public:
 
     virtual index* dup() const;
     virtual void print(std::ostream& out) const;
-    virtual void serialSizes(uint64_t&, uint64_t&, uint64_t&) const;
     virtual int write(ibis::array_t<double> &,
                       ibis::array_t<int64_t> &,
                       ibis::array_t<uint32_t> &) const;
